--- a/slides.html
+++ b/slides.html
@@ -24,7 +24,7 @@
 		}
 
 		body {
-			font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif; 
+			font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
 		}
 
 		a {
@@ -77,7 +77,7 @@
 		}
 
 		.remark-slide-number {
-			color: #000;	
+			color: #000;
 			font-size: medium;
 		}
 
@@ -419,7 +419,7 @@ function
 2. Compute the offset of system(2)
 3. Read our command, and write it somewhere
 4. Call system(3) on it
-5. Send our command 
+5. Send our command
 
 But…
 
@@ -461,7 +461,75 @@ writeable addr
 
 ---
 
-# 
+#
+
+---
+
+# Do you want to automate ?
+
+- internal ways of sequencing commands
+- r2pipe (IPC)
+
+---
+
+# Internal basics
+
+- pd 1; ao 1
+- ao | grep name
+- ao > test.txt
+- ao >> test.txt
+
+---
+
+# Internal loops
+
+- classic loop : @@=$$ $$+2
+- foreach : @@i
+- loop over a flag: afi @@ fcn.* ~name
+- and many others... @@? ;)
+
+---
+
+# Define Macros
+
+- define it : (foobar, pd1, ao)
+- use it : .(foobar)
+- don't remember your macro ? (*
+- remove it : (-foobar)
+
+---
+
+# Macros with arguments
+
+- (foobar arg1, pd $0)
+
+---
+
+# You don't like r2 cli ?
+
+- r2pipe works with your favourite language
+- NodeJS, Python, Java, Ruby, ...
+
+---
+
+# Install r2pipe
+
+- npm install r2pipe
+- pip install r2pipe
+
+---
+
+# r2pipe use
+
+```
+import r2pipe
+
+r2 = r2pipe.open('./sushi-a6cb...98c8')
+r2.cmd('aa')
+print(r2.cmd('pdf'))
+r2.cmd('s main')
+print(r2.cmd('pdf'))
+```
 
 ---
 
@@ -477,7 +545,7 @@ writeable addr
 # Cheers
 
  - Xarkes for inviting us!
- 
+
 ---
 background-position: center;
 background-size: contain;
