mention scripting part in the agenda

--- a/slides.html
+++ b/slides.html
@@ -123,6 +123,7 @@ Welcome to radare2!
 1. How do I radare2?
 2. How do I impress my CTF pals with it?
 3. How can I get r2 swag?
+4. How do I automate things in radare2?
 
 ---
 
