--- a/slides.html
+++ b/slides.html
@@ -3,94 +3,214 @@
   <head>
     <title>Radare2</title>
     <meta charset="utf-8">
-		<!--
     <style>
-		@font-face {
-			font-family: 'Barrio';
-			font-style: normal;
-			font-weight: 400;
-			src: local('Barrio Regular'), local('Barrio-Regular'), url(Barrio.ttf) format('truetype');
-		}
+        @import url(https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,700,700i);
+        @import url(https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css);
 
-		h1 { font-family: Barrio; }
-		h1:before /*, h2:before, h3:before */ {
-			content: '» ';
-			color: #f0082d;
-		}
+        body {
+          font-family: 'Fira Sans','Droid Serif', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
+        }
 
-		em{
-			color: #f0082d;
-			font-weight:bold;
-		}
+        .remark-code, .remark-inline-code {
+          font-family: 'Fira Code', 'Lucida Console', Monaco, monospace;
+          font-size: 80%;
+        }
 
-		body {
-			font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
-		}
-
-		a {
-			color:#f0082d;
-			text-decoration:none;
-		}
-
-		.remark-code, code  {
-			background-color: #f3f3f3;
-			font-size: 80%;
-		}
-		.hljs-default .hljs-string {
-			font-weight: bold;
-			color:#f0082d;
-		}
-		.hljs-default .hljs-keyword {
-			color:#a02724;
-		}
-
-		blockquote {
-			border-left: 10px solid #ccc;
-			padding: 10px;
-			padding-left: 20px;
-			background-color: #F3F3F3;
-		}
-
-		.remark-slide-content:after {
-			content: "";
-			position: absolute;
-			top: 10px;
-			right: 0px;
-			height: 40px;
-			width: 120px;
-			background-repeat: no-repeat;
-			background-size: contain;
-			background-image: url('logo.png');
-		}
-
-		.footnote {
-			position: absolute;
-			bottom: 3em;
-			font-size: medium;
-		}
-
-		.remark-slide-content {
-			font-size: x-large;
-			padding: 1em 0.5em 1em 2em;
-			border-left: 10px solid #f0082d;
-			background-size: content;
-		}
-
-		.remark-slide-number {
-			color: #000;
-			font-size: medium;
-		}
-
-		.left-column {
-			width: 55%;
-			float: left;
-		}
-		.right-column {
-			width: 45%;
-			float: right;
-		}
+        .remark-slide-content {
+            background-color: #FAFAFA;
+            border-top: 80px solid #23373B;
+            font-size: 20px;
+            font-weight: 300;
+            line-height: 1.5;
+            padding: 1em 2em 1em 2em
+          }
+          .title-slide .inverse .remark-slide-content {
+            background-color: #FAFAFA;
+          }
+          .inverse {
+            background-color: #23373B;
+            text-shadow: none;
+          }
+          .remark-slide-content > h1 {
+            font-family: 'Fira Sans';
+            font-weight: normal;
+            font-size: 45px;
+            margin-top: -95px;
+            margin-left: -00px;
+            color: #FAFAFA;
+          }
+          .remark-slide-content > inverse {
+          width: 112px;
+          height: 47px;
+          border-bottom: 1px solid black;
+          position: absolute;
+          }
+          /* Removes colored bar from top of the slide resulting in a clear slide */
+          .clear{
+            border-top: 0px solid #FAFAFA;
+          }
+          .remark-slide-content > h2, h3, h4 {
+            padding-top: -15px;
+            padding-bottom: 00px;
+            color: #1A292C;
+            text-shadow: none;
+            font-weight: 400;
+            text-align: left;
+            margin-left: 00px;
+            margin-bottom: -10px;
+          }
+          .remark-slide-content > h2, .pull-left > h2, .pull-right > h2 {
+            font-size: 35px;
+          }
+          .remark-slide-content > h3, .remark-slide-content > h4,
+          .pull-left > h3, .pull-left > h4, .pull-right > h3, .pull-right > h4 {
+            font-size: 30px;
+          }
+          .title-slide {
+            background-color: #FAFAFA;
+            border-top: 80px solid #FAFAFA;
+          }
+          .title-slide > h1  {
+            color: #1A292C;
+            font-size: 40px;
+            text-shadow: none;
+            font-weight: 400;
+            text-align: left;
+            margin-left: 15px;
+            padding-top: 80px;
+          }
+          .title-slide > h2  {
+            margin-top: -25px;
+            padding-bottom: -20px;
+            color: #1A292C;
+            text-shadow: none;
+            font-weight: 300;
+            font-size: 35px;
+            text-align: left;
+            margin-left: 15px;
+          }
+          .title-slide > h3  {
+            color: #1A292C;
+            text-shadow: none;
+            font-weight: 300;
+            font-size: 25px;
+            text-align: left;
+            margin-left: 15px;
+            margin-bottom: -30px;
+          }
+          .remark-slide-number {
+            font-size: 13pt;
+            font-family: 'Fira Sans';
+            color: #272822;
+            opacity: 1;
+          }
+          .inverse .remark-slide-number {
+            font-size: 13pt;
+            font-family: 'Fira Sans';
+            color: #FAFAFA;
+            opacity: 1;
+          }
+          /* turns off slide numbers for title page: https://github.com/gnab/remark/issues/298 */
+          .title-slide .remark-slide-number {
+            display: none;
+          }
+          .remark-inline-code {
+            /* background: #F5F5F5; /* lighter */
+            background: #e7e8e2; /* darker */
+            border-radius: 3px;
+            padding: 4px;
+          }
+          .code10 .remark-code {
+            font-size: 10%;
+          }
+          .code20 .remark-code {
+            font-size: 20%;
+          }
+          .code30 .remark-code {
+            font-size: 30%;
+          }
+          .code40 .remark-code {
+            font-size: 40%;
+          }
+          .code50 .remark-code {
+            font-size: 50%;
+          }
+          .code60 .remark-code {
+            font-size: 60%;
+          }
+          .code70 .remark-code {
+            font-size: 70%;
+          }
+          .code80 .remark-code {
+            font-size: 80%;
+          }
+          .code90 .remark-code {
+            font-size: 90%;
+          }
+          .code100 .remark-code {
+            font-size: 100%;
+          }
+          .font10 {
+            font-size: 10%;
+          }
+          .font20 {
+            font-size: 20%;
+          }
+          .font30 {
+            font-size: 30%;
+          }
+          .font40 {
+            font-size: 40%;
+          }
+          .font50 {
+            font-size: 50%;
+          }
+          .font60 {
+            font-size: 60%;
+          }
+          .font70 {
+            font-size: 70%;
+          }
+          .font80 {
+            font-size: 80%;
+          }
+          .font90 {
+            font-size: 90%;
+          }
+          .font100 {
+            font-size: 100%;
+          }
+          .font110 {
+            font-size: 110%;
+          }
+          .font120 {
+            font-size: 120%;
+          }
+          .font130 {
+            font-size: 130%;
+          }
+          .font140 {
+            font-size: 140%;
+          }
+          .font150 {
+            font-size: 150%;
+          }
+          .font160 {
+            font-size: 160%;
+          }
+          .font170 {
+            font-size: 170%;
+          }
+          .font180 {
+            font-size: 180%;
+          }
+          .font190 {
+            font-size: 190%;
+          }
+          .font200 {
+            font-size: 200%;
+          }
     </style>
-	-->
   </head>
   <body>
     <textarea id="source">
