in case some people haven't install it

--- a/slides.html
+++ b/slides.html
@@ -273,6 +273,14 @@ Welcome to radare2!
 
 ---
 
+# Install radare2 ?
+
+- `git clone https://github.com/radare/radare2`
+- `cd radare2`
+- `git checkout last-version`
+- `./sys/install.sh`
+
+---
 
 # How do I radare2?
 
