--- a/slides.html
+++ b/slides.html
@@ -838,7 +838,9 @@ writeable addr
 
 ---
 
-#
+# R2con crackme
+
+We'll trade the _amazing_ r2flag for a short presentation of your solution :)
 
 ---
 # Documentations and friendly neighbours
