add search command

--- a/slides.html
+++ b/slides.html
@@ -400,6 +400,15 @@ Welcome to radare2!
 
 ---
 
+# Search command
+
+- `/`  search strings
+- `/x` - search hexadecimal
+- `/ac` - search opcodes
+- `/R` - search Rop Gadgets
+
+---
+
 # Analyze command
 
 - af/aaX - Analyse function / Auto-analaysis
