--- a/slides.html
+++ b/slides.html
@@ -432,7 +432,7 @@ class: middle, left
 
 # Analyze command
 
-- `af/`aa…` - Analyse function / Auto-analaysis
+- `af`/`aa…` - Analyse function / Auto-analaysis
 - `afl`/`afi`/`Vv` - function information
 - `pdf`/`pdr` - print disassembly function (linear/recursive)
 - `afv` - manipulate arguments and variables
