--- a/slides.html
+++ b/slides.html
@@ -446,10 +446,11 @@ class: middle, left
 # Analyze exercise
 
 - Analyze all functions with the default auto-analysis
-- List functions by name, anything interesting? Can you rename some functions to something more meaningful
-- How many local variables does the subroutine at 0x0804842b have?
-- Analyze opcode at offset 0x0804842b
-- Use ahi to convert the immediate to a more meaningful base
+- List functions by name, anything interesting?
+	- Can you rename some functions to something more meaningful
+- How many local variables does `0x0804842b` have?
+- Analyze the first opcode at `0x0804842b`
+- Use `ahi` to convert the immediate to decimal
 
 ---
 class: middle, left
@@ -457,10 +458,11 @@ class: middle, left
 # Analyze exercise
 
 - Analyze all functions with the default auto-analysis → `aaa`
-- List functions by name, anything interesting? Can you rename some functions to something more meaningful → `afl`
-- How many local variables does the subroutine at 0x0804842b have? → `afv @ 0x0804842b`
-- Analyze opcode at offset 0x0804842 → `ao @ 0x0804842b`
-- Use ahi to convert the immediate to a more meaningful base → `ahi d @ 0x0804842b`
+- List functions by name, anything interesting?
+	- Can you rename some functions to something more meaningful → `afl`
+- How many local variables does `0x0804842b` have? → `afv @ 0x0804842b`
+- Analyze the first opcode at `0x0804842` → `ao @ 0x0804842b`
+- Use `ahi` to convert the immediate to decimal → `ahi d @ 0x0804842b`
 
 ---
 class: middle, left
