Improve a bit the r2script part

--- a/slides.html
+++ b/slides.html
@@ -467,15 +467,7 @@ class: middle, left
 ---
 class: middle, left
 
-# Do you want to automate ?
-
-- internal ways of sequencing commands
-- `r2pipe` (IPC)
-
----
-class: middle, left
-
-# Internal basics, bash FTW
+# Pipes and redirections
 
 - `pd 1; ao 1`
 - `ao | grep name`
@@ -485,7 +477,7 @@ class: middle, left
 ---
 class: middle, left
 
-# Internal loops
+# Loops
 
 - classic loop : `@@=$$ $$+2`
 - foreach : `@@i`
@@ -512,10 +504,10 @@ class: middle, left
 ---
 class: middle, left
 
-# You don't like r2 cli ?
+# R2script is too horrible? Just use r2pipe!
 
-- `r2pipe` works with your favourite language
-- NodeJS, Python, Java, Ruby, ...
+- r2script is awful, bindings sucks, … all hail r2pipe!
+- It works with your favourite language: NodeJS, Python, Java, Ruby, Prolog, OCaml, …
 
 ---
 class: middle, left
